# contract_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: analyse_contract_example.py  compare_contracts_example.py
src/contract_analysis/: __init__.py  content_understanding.py  contract_analysis.py  contract_analysis_old.py  document.py  document_intelligence.py  openai_gpt.py  translation.py
tests/: test_content_understanding.py  test_contract_analysis.py  test_document.py  test_document_intelligence.py  test_dummy.py  test_openaigpt.py  test_translation.py
